--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "src/server.js",
+  "main": "src/app.js",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon",
